--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -5,25 +5,26 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
     android:background="@drawable/side_nav_bar"
+    android:baselineAligned="false"
     android:gravity="bottom"
+    android:orientation="vertical"
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
     android:weightSum="1"
-    android:baselineAligned="false"
-    android:orientation="vertical"
-    tools:layout_editor_absoluteY="81dp"
-    tools:layout_editor_absoluteX="0dp">
+    tools:context="org.dvorak.cbushackidea.MainActivity"
+    tools:layout_editor_absoluteX="0dp"
+    tools:layout_editor_absoluteY="81dp">
 
     <ImageView
         android:id="@+id/ivWeatherIcon"
         android:layout_width="104dp"
         android:layout_height="82dp"
-        app:srcCompat="@drawable/icon_na"
-        android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="62dp"
+        android:src="@drawable/icon_na"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="62dp" />
-
+        app:layout_constraintTop_toTopOf="parent" />
+    <!--app:srcCompat="@drawable/icon_na"-->
     <TextView
         android:id="@+id/tvTemperature"
         android:layout_width="154dp"
@@ -35,34 +36,34 @@
         android:text="@string/temperature"
         android:textAppearance="@style/TextAppearance.AppCompat.Display4"
         android:textStyle="bold"
+        app:layout_constraintHorizontal_bias="0.515"
         app:layout_constraintLeft_toRightOf="@+id/ivWeatherIcon"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="0.515" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/ivYahooLogo"
         android:layout_width="129dp"
         android:layout_height="19dp"
-        app:srcCompat="@drawable/yahoo_logo"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="5dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
-        tools:layout_editor_absoluteY="136dp"
-        app:layout_constraintHorizontal_bias="0.502" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:srcCompat="@drawable/yahoo_logo"
+        tools:layout_editor_absoluteY="136dp" />
 
     <TextView
         android:id="@+id/tvLocation"
         android:layout_width="56dp"
         android:layout_height="14dp"
-        android:text="@string/location"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_marginTop="8dp"
+        android:text="@string/location"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvCondition"
