--- a/app/src/main/res/layout/activity_map_dialog.xml
+++ b/app/src/main/res/layout/activity_map_dialog.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="24dp"
+        android:textColor="#000000"
         android:text="@string/map_dialog_text"
         android:textSize="15sp" />
 
