--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -2,9 +2,10 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/clBackground"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="@drawable/side_nav_bar"
+    android:background="@drawable/sky"
     android:baselineAligned="false"
     android:gravity="bottom"
     android:orientation="vertical"
@@ -18,25 +19,26 @@
         android:id="@+id/ivWeatherIcon"
         android:layout_width="104dp"
         android:layout_height="82dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginLeft="0dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="62dp"
+        android:layout_marginTop="35dp"
         android:src="@drawable/icon_na"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
     <!--app:srcCompat="@drawable/icon_na"-->
     <TextView
         android:id="@+id/tvTemperature"
-        android:layout_width="154dp"
+        android:layout_width="155dp"
         android:layout_height="88dp"
         android:layout_marginLeft="64dp"
         android:layout_marginRight="16dp"
-        android:layout_marginTop="42dp"
-        android:fontFamily="sans-serif"
+        android:layout_marginTop="37dp"
+        android:fontFamily="cursive"
         android:text="@string/temperature"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
-        android:textStyle="bold"
-        app:layout_constraintHorizontal_bias="0.515"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textColor="@color/common_google_signin_btn_text_light_default"
+        android:textSize="55sp"
+        app:layout_constraintHorizontal_bias="0.533"
         app:layout_constraintLeft_toRightOf="@+id/ivWeatherIcon"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -57,24 +59,32 @@
 
     <TextView
         android:id="@+id/tvLocation"
-        android:layout_width="56dp"
-        android:layout_height="14dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="105dp"
+        android:layout_height="18dp"
+        android:layout_marginBottom="43dp"
+        android:layout_marginRight="40dp"
         android:text="@string/location"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textAlignment="center"
+        android:textColor="@color/common_google_signin_btn_text_light_pressed"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <TextView
         android:id="@+id/tvCondition"
-        android:layout_width="55dp"
-        android:layout_height="14dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="256dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="102dp"
+        android:layout_height="17dp"
+        android:layout_marginBottom="33dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="70dp"
         android:text="@string/condition"
-        app:layout_constraintLeft_toRightOf="@+id/tvLocation"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textAlignment="center"
+        android:textColor="@color/common_google_signin_btn_text_light_pressed"
+        android:textSize="10sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/ivWeatherIcon"
+        app:layout_constraintVertical_bias="0.6" />
 
 </android.support.constraint.ConstraintLayout>
