--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -4,6 +4,10 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
+
     </style>
 </resources>
+
+
+<!--<item name="android:statusBarColor">@android:color/transparent</item>-->
+<!--Was removed to prevent white status bar color on the about page-->
