Added upcoming events

--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/clBackground"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="@drawable/sky"
+    android:background="@color/cast_libraries_material_featurehighlight_outer_highlight_default_color"
     android:baselineAligned="false"
     android:gravity="bottom"
     android:orientation="vertical"
@@ -33,10 +33,9 @@
         android:layout_marginLeft="64dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="37dp"
-        android:fontFamily="cursive"
         android:text="@string/temperature"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textColor="@color/common_google_signin_btn_text_light_default"
+        android:textColor="@color/cast_expanded_controller_text_color"
         android:textSize="55sp"
         app:layout_constraintHorizontal_bias="0.533"
         app:layout_constraintLeft_toRightOf="@+id/ivWeatherIcon"
@@ -65,7 +64,7 @@
         android:layout_marginRight="40dp"
         android:text="@string/location"
         android:textAlignment="center"
-        android:textColor="@color/common_google_signin_btn_text_light_pressed"
+        android:textColor="@color/cast_expanded_controller_text_color"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
@@ -79,7 +78,7 @@
         android:layout_marginTop="70dp"
         android:text="@string/condition"
         android:textAlignment="center"
-        android:textColor="@color/common_google_signin_btn_text_light_pressed"
+        android:textColor="@color/cast_expanded_controller_text_color"
         android:textSize="10sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
