--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
         <item
@@ -10,6 +11,8 @@
             android:id="@+id/nav_upcoming_events"
             android:icon="@drawable/side_nav_bar"
             android:title="Upcoming Events" />
+
+        <!--android:onClick="buttonOnClick"-->
         <item
             android:id="@+id/nav_weather"
             android:icon="@drawable/side_nav_bar"
