Added made up data to the parkingactivity

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,32 +4,14 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_map"
-            android:icon="@drawable/side_nav_bar"
-            android:title="Map" />
-        <item
             android:id="@+id/nav_upcoming_events"
-            android:icon="@drawable/side_nav_bar"
+            android:icon="@drawable/ic_event_black_24dp"
             android:title="Upcoming Events" />
 
-        <!--android:onClick="buttonOnClick"-->
         <item
-            android:id="@+id/nav_weather"
-            android:icon="@drawable/side_nav_bar"
-            android:title="Weather" />
+            android:id="@+id/nav_park"
+            android:icon="@drawable/ic_local_parking_black_24dp"
+            android:title="Parking Gauge" />
     </group>
-
-    <!--<item android:title="Communicate">-->
-        <!--<menu>-->
-            <!--<item-->
-                <!--android:id="@+id/nav_share"-->
-                <!--android:icon="@drawable/ic_menu_share"-->
-                <!--android:title="Share" />-->
-            <!--<item-->
-                <!--android:id="@+id/nav_send"-->
-                <!--android:icon="@drawable/ic_menu_send"-->
-                <!--android:title="Send" />-->
-        <!--</menu>-->
-    <!--</item>-->
 
 </menu>
